[workspace.package]
description = "Quakk is a node based live coding synthesizer"
repository = "https://github.com/Ora9/quakk"
license = "MIT"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "packages/quakk",
    "packages/quakk_cli",
    "packages/quakk_numeric"
]
default-members = ["packages/quakk_cli"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"
dead_code = "allow"

[workspace.dependencies]
# Workspace dependencies
quakk = { path = "packages/quakk" }
quakk_cli = { path = "packages/quakk_cli" }
quakk_numeric = { path = "packages/quakk_numeric" }

# External dependencies
anyhow = "1.0.100"
